fixed text-align and chackbox text

--- a/css/main.css
+++ b/css/main.css
@@ -824,7 +824,6 @@ body {
 @media screen and (min-width: 0px) and (max-width: 960px) {
     .about .text-block {
         padding-left:0px;
-        text-align: center;
         margin: 0 auto
     }
 }
